platform-v2/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "ai-engine.cloud"
    http:
      paths:
      - pathType: Prefix
        path: /keycloak/(.*)
        backend:
          service:
            name: keycloack-keycloak.keycloack-system.svc.cluster.local
            port:
              number: 80
